k8s/05-monitoring/02-kube-state-metrics.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-state-metrics
  namespace: monitoring

spec:
  replicas: 1

  selector:
    matchLabels:
      app: kube-state-metrics

  template:
    metadata:
      labels:
        app: kube-state-metrics

    spec:
      serviceAccountName: kube-state-metrics

      containers:
      - name: kube-state-metrics
        image: registry.k8s.io/kube-state-metrics/kube-state-metrics:v2.12.0

        ports:
        - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: kube-state-metrics
  namespace: monitoring

spec:
  selector:
    app: kube-state-metrics

  ports:
  - port: 8080
    targetPort: 8080
