k8s/05-monitoring/03-prometheus.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  namespace: monitoring

spec:
  replicas: 1

  selector:
    matchLabels:
      app: prometheus

  template:
    metadata:
      labels:
        app: prometheus

    spec:
      containers:
      - name: prometheus
        image: prom/prometheus:v2.51.2

        ports:
        - containerPort: 9090

        volumeMounts:
        - name: prometheus-config
          mountPath: /etc/prometheus

        - name: alert-rules
          mountPath: /etc/prometheus/rules

      volumes:
      - name: prometheus-config
        configMap:
          name: prometheus-config

      - name: alert-rules
        configMap:
          name: bunnywear-alert-rules

---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: monitoring

spec:
  type: NodePort

  selector:
    app: prometheus

  ports:
  - port: 9090
    targetPort: 9090
    nodePort: 30090
