k8s/05-monitoring/04-grafana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: monitoring

spec:
  replicas: 1

  selector:
    matchLabels:
      app: grafana

  template:
    metadata:
      labels:
        app: grafana

    spec:
      securityContext:
        fsGroup: 472
        runAsUser: 472
        runAsGroup: 472

      containers:
      - name: grafana
        image: grafana/grafana:11.0.0

        ports:
        - containerPort: 3000

        volumeMounts:
        - name: grafana-storage
          mountPath: /var/lib/grafana

        - name: grafana-datasources
          mountPath: /etc/grafana/provisioning/datasources

      volumes:
      - name: grafana-storage
        persistentVolumeClaim:
          claimName: grafana-pvc

      - name: grafana-datasources
        configMap:
          name: grafana-datasources

---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: monitoring

spec:
  type: NodePort

  selector:
    app: grafana

  ports:
  - port: 3000
    targetPort: 3000
    nodePort: 30300
